update home page details

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Carlowens.github.io</title>
+    <title>Carl Owens - PHP Developer Liverpool</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/carlowens">View on GitHub</a>
 
-          <h1 id="project_title">Carlowens.github.io</h1>
-          <h2 id="project_tagline">carlowens.me website</h2>
+          <h1 id="project_title">Carl Owens - PHP Developer Liverpool</h1>
+          <h2 id="project_tagline">Specialist PHP Zend Certified Developer Liverpool</h2>
 
         </header>
     </div>
@@ -27,10 +27,38 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="carlowensgithubio" class="anchor" href="#carlowensgithubio"><span class="octicon octicon-link"></span></a>carlowens.github.io</h1>
+        <h1>Welcome</h1>
 
-<p>carlowens.me website</p>
+<p>Details:</p>
+          <ul>
+              <li>Email:
+                  <script type="text/javascript" language="javascript">
+                      <!--
+                      { coded = "qHtk@uHtLCGtT.q8.b3"
+                          key = "CL9v5xR382e4JNGYWyDZmgpzPr7j1TFlVEah6cMKXuIftQSn0BkoUHsdqiAwbO"
+                          shift=coded.length
+                          link=""
+                          for (i=0; i<coded.length; i++) {
+                              if (key.indexOf(coded.charAt(i))==-1) {
+                                  ltr = coded.charAt(i)
+                                  link += (ltr)
+                              }
+                              else {
+                                  ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+                                  link += (key.charAt(ltr))
+                              }
+                          }
+                          document.write("<a href='mailto:"+link+"'>Carl@PartFire.co.uk</a>")
+                      }
+                      //-->
+                  </script><noscript>Sorry, you need Javascript on to email me.</noscript>
+
+              </li>
+              <li>Work: <a href="https://partfire.co.uk" target="_blank" title="Web design Liverpool">PartFire</a></li>
+              <li>LinkedIn: <a href="http://uk.linkedin.com/in/carl0wens" target="_blank">http://uk.linkedin.com/in/carl0wens</a></li>
+              <li>GitHub: <a href="https://github.com/carlowens" target="_blank">https://github.com/carlowens</a></li>
+              <li>Twitter: <a href="https://twitter.com/owenscarl" target="_blank">https://twitter.com/owenscarl</a></li>
+          </ul>
       </section>
     </div>
 
