update home page details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/carlowens">View on GitHub</a>
 
-          <h1 id="project_title">Carl Owens - PHP Developer Liverpool</h1>
+          <h1 id="project_title">Carl Owens - PHP Developer</h1>
           <h2 id="project_tagline">Specialist PHP Zend Certified Developer Liverpool</h2>
 
         </header>
@@ -27,9 +27,14 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>Welcome</h1>
+        <h1>About</h1>
+          <p>Carl has over 10 years experience of using open-source technologies and has worked on many large and complex systems and environments.</p>
 
-<p>Details:</p>
+          <p>Carl’s recent projects include RESTful APIs, custom Symfony 2 websites, Magento e-commerce websites and more for clients such as The United Nations World Food Programme, Smythson, SodaStream and many others.</p>
+
+          <p>He also has a flare for Agile software development practices and enjoys using the Scrum methodology to help delivery projects on time and on budget.</p>
+
+          <h2>Details:</h2>
           <ul>
               <li>Email:
                   <script type="text/javascript" language="javascript">
