update home page details

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                   </script><noscript>Sorry, you need Javascript on to email me.</noscript>
 
               </li>
-              <li>Work: <a href="https://partfire.co.uk" target="_blank" title="Web design Liverpool">PartFire</a></li>
+              <li>Work: <a href="http://partfire.co.uk" target="_blank" title="Web design Liverpool">PartFire</a></li>
               <li>LinkedIn: <a href="http://uk.linkedin.com/in/carl0wens" target="_blank">http://uk.linkedin.com/in/carl0wens</a></li>
-              <li>GitHub: <a href="https://github.com/carlowens" target="_blank">https://github.com/carlowens</a></li>
-              <li>Twitter: <a href="https://twitter.com/owenscarl" target="_blank">https://twitter.com/owenscarl</a></li>
+              <li>GitHub: <a href="http://github.com/carlowens" target="_blank">https://github.com/carlowens</a></li>
+              <li>Twitter: <a href="http://twitter.com/owenscarl" target="_blank">https://twitter.com/owenscarl</a></li>
           </ul>
       </section>
     </div>
