update home page details

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
               </li>
               <li>Work: <a href="http://partfire.co.uk" target="_blank" title="Web design Liverpool">PartFire</a></li>
+              <li>Zend: <a href="http://www.zend.com/en/yellow-pages/ZEND014464" target="_blank">http://www.zend.com/en/yellow-pages/ZEND014464</a></li>
               <li>LinkedIn: <a href="http://uk.linkedin.com/in/carl0wens" target="_blank">http://uk.linkedin.com/in/carl0wens</a></li>
               <li>GitHub: <a href="http://github.com/carlowens" target="_blank">https://github.com/carlowens</a></li>
               <li>StackOverflow: <a href="http://stackoverflow.com/users/1785726/carl-owens" target="_blank">http://stackoverflow.com/users/1785726/carl-owens</a></li>
