--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Carl Owens - PHP Developer Liverpool</title>
+    <title>PHP Web Developer Liverpool - Carl Owens</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/carlowens">View on GitHub</a>
 
-          <h1 id="project_title">Carl Owens - PHP Developer</h1>
-          <h2 id="project_tagline">Specialist PHP Zend Certified Developer Liverpool</h2>
+          <h1 id="project_title">Carl Owens - PHP Developer Liverpool</h1>
+          <h2 id="project_tagline">Specialist PHP Zend Certified Developer based in Liverpool</h2>
 
         </header>
     </div>
@@ -27,14 +27,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>About</h1>
-          <p>Carl has over 10 years experience of using open-source technologies and has worked on many large and complex systems and environments.</p>
+        <h1>Hi</h1>
+          <p>I'm Carl Owens - a Software Engineer with a passion for building products using best practices and suitable technologies.</p>
+          <p>I am the co-founder of PartFire - a professional web & e-commerce solutions provider.</p>
 
-          <p>Carl’s recent projects include RESTful APIs, custom Symfony 2 websites, Magento e-commerce websites and more for clients such as The United Nations World Food Programme, Smythson, SodaStream and many others.</p>
+          <p>Before founding PartFire, I was a software engineer for Inviqa UK, a design & development firm that specialises in E-commerce. Projects I helped deliver include notable clients such as Smythson, United Nations, SodaStream and many more.</p>
 
-          <p>He also has a flare for Agile software development practices and enjoys using the Scrum methodology to help delivery projects on time and on budget.</p>
-
-          <h2>Details:</h2>
+          <h2>Find out more or get in touch:</h2>
           <ul>
               <li>Email:
                   <script type="text/javascript" language="javascript">
@@ -56,7 +55,7 @@
                           document.write("<a href='mailto:"+link+"'>Carl@PartFire.co.uk</a>")
                       }
                       //-->
-                  </script><noscript>Sorry, you need Javascript on to email me.</noscript>
+                  </script><noscript>Sorry, you need Javascript to email me.</noscript>
 
               </li>
               <li>Work: <a href="http://partfire.co.uk" target="_blank" title="Web design Liverpool">PartFire</a></li>
